--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI="mongodb+srv://erodriiguezz:NhCxMQp1tAleu0Wp@cluster0.ybu8p.mongodb.net/?retryWrites=true&w=majority"
+ATLAS_URI = "mongodb+srv://erodriiguezz:NhCxMQp1tAleu0Wp@cluster0.ybu8p.mongodb.net/?retryWrites=true&w=majority";
